<?xml version="1.0"?>
<package format="3">
  <name>ars408_ros</name>
  <version>1.0.0</version>
  <description>Continental ARS408-21 ROS2 Driver</description>
  <license>Apache License</license>

  <author email="mark@telemething.com">Abraham Monrroy</author>
  <author email="abraham.monrroy@tier4.jp">Abraham Monrroy</author>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>can_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>unique_identifier_msgs</depend>
  <depend>radar_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>

  <exec_depend>ros2_socketcan</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
